fix(FOOTER): icon isn't good align

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -2,7 +2,7 @@ footer {
   display: flex;
   // justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 
   padding-top: 15px;
 
@@ -10,6 +10,7 @@ footer {
     justify-items: center;
     width: 80px;
     height: 80px;
+    margin-right: 75px;
   }
 
   .theme_switch {
